package imadz.team.efficiency.application.core

case class AnalysisProjectOwner()
