package imadz.team.efficiency.application.core

trait AnalysisTask {

}
