package imadz.team.efficiency.application.task

import imadz.team.efficiency.application.core.AnalysisTask

class ReadCommitTask extends AnalysisTask{

}
