package imadz.team.efficiency.domain

trait DomainEvent {

}
