package imadz.team.efficiency.domain.entity.mgt

case class AnalysisProject()
