package imadz.team.efficiency.domain.processor

class CommitContributorProcessor {

}
